--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="birthday-text" data-text="Happy Birthday">Happy Birthday</h1>
-            <p class="name-text">Pak Darsono Hadi Santoso</p>
+            <p class="name-text">Pak Darsono Hadhi Santoso</p>
             <div class="countdown" id="countdown"></div>
             <button class="celebrate-btn" onclick="startCelebration()">
                 <span>Mulai Perayaan</span>
