--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <h2 class="section-title">Pesan Spesial</h2>
             <div class="message-card">
-                <p>Selamat ulang tahun! Semoga hari ini menjadi awal dari tahun yang penuh kebahagiaan, kesuksesan, dan petualangan baru. Terima kasih telah menjadi bagian penting dalam hidup kami.</p>
+                <p>Selamat ulang tahun! Semoga hari ini menjadi awal dari tahun yang penuh kebahagiaan, kesuksesan, dan petualangan baru.</p>
                 <p class="signature">- CCRM</p>
             </div>
         </div>
